# detectron2

./: README.md  pyproject.toml
detectron2/demo/: demo.py  export-torchscript-example.md  inference_beginner.py  torchscript_inference.py  train_custom_dataset.py
